[tool.poetry]
name = "domlytics-synthmed"
version = "0.1.0"
description = "Python implementation of Synthea for generating synthetic healthcare data"
authors = ["Domlytics <info@domlytics.com>"]
license = "AGPL-2.0"
readme = "README.md"
repository = "https://github.com/domlytics/domlytics-synthmed"
packages = [{include = "synthmed"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pydantic = "^2.0.0"
click = "^8.1.3"
numpy = "^1.24.0"
scipy = "^1.10.0"
fhir-resources = "^7.0.0"
pandas = "^2.0.0"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.3.0"
sphinx = "^7.0.0"
sphinx-rtd-theme = "^1.2.0"

[tool.poetry.scripts]
pysynthea = "synthmed.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py" 